--- a/style.css
+++ b/style.css
@@ -1,6 +1,10 @@
 html {
-    position: relative;
+    height: 100%;
+}
+body{
     min-height: 100%;
+    display: flex;
+    flex-direction: column;
 }
 
 body {
