--- a/css/draw.css
+++ b/css/draw.css
@@ -5,10 +5,10 @@
     margin-left: 30px;
     margin-top: 30px;
 
-    border: 5px solid black;
-    padding-bottom: 50px;
+    border: 3px solid black;
+    padding-bottom: 20px;
     border-radius: 8px;
-
+    margin-bottom: 30px;
 }
 table, td{
     border: 2px solid black;
