--- a/css/draw.css
+++ b/css/draw.css
@@ -13,6 +13,7 @@
 table, td{
     border: 2px solid black;
     border-collapse: collapse;
+    user-select: none;
 }
 td{
     width: calc((100vh - 300px) / 28);
