--- a/css/draw.css
+++ b/css/draw.css
@@ -1,3 +1,8 @@
+#pageContent{
+    display: flex;
+
+    gap: 10px;
+}
 .grid-container{
     width: 40%;
     text-align: center;
@@ -9,6 +14,7 @@
     padding-bottom: 20px;
     border-radius: 8px;
     margin-bottom: 30px;
+
 }
 table, td{
     border: 2px solid black;
@@ -27,4 +33,48 @@ table{
 }
 #resetButton{
     margin-top: 20px;
+}
+#results{
+    margin-left: 10%;
+    margin-top: 3%;
+    font-size: 25px;
+}
+
+/* Predictions*/
+.predictions {
+    display: flex;
+    height: 100%;
+}
+
+.prediction-col {
+    padding: 0 2px;
+}
+
+.prediction-bar-container {
+    background: #f5f5f5;
+    height: 70%;
+    position: relative;
+    width: 50px;
+}
+
+.prediction-bar {
+    background: #c5ea38;
+    bottom: 0;
+    position: absolute;
+    width: 50px;
+}
+
+.prediction-number {
+    color: #000000;
+    font-size: 35px;
+    text-align: center;
+}
+
+.top-prediction .prediction-bar {
+    background: #0000ff;
+}
+
+.top-prediction .prediction-number {
+    color: #0000ff;
+    font-weight: bold;
 }
