--- a/css/home.css
+++ b/css/home.css
@@ -6,6 +6,13 @@
     text-align: center;
     padding: 3%;
 }
+
+#left-container img{
+    width: 40%;
+    height: 80%;
+    margin: 3%;
+}
+
 #right-container{
     text-align: center;
     padding: 3%;
