--- a/css/draw.css
+++ b/css/draw.css
@@ -40,10 +40,9 @@ table{
     font-size: 25px;
 }
 
-/* Predictions*/
 .predictions {
     display: flex;
-    height: 100%;
+    height: 85%;
 }
 
 .prediction-col {
@@ -84,13 +83,27 @@ table{
 }
 
 #brushContainer {
-    display: inline-flex; /* Use inline-flex instead of flex */
+    display: inline-flex;
     justify-content: center;
     align-items: center;
     margin-bottom: 5%;
     border: 2px solid black;
     border-radius: 5px;
-    flex-wrap: nowrap; /* Prevent text and input from wrapping */
+    flex-wrap: nowrap;
     padding: 1%;
 }
+.btn-group {
+    transition: all 0.3s ease;
+}
+
+.btn-group label {
+    transition: all 0.3s ease;
+}
+
+.btn-group .btn-primary.active {
+    background-color: #000e79;
+    color: #fff;
+    border-color: #000e79;
+}
+
 
