--- a/css/home.css
+++ b/css/home.css
@@ -2,32 +2,167 @@
     width: 100%;
     height: 100%;
 }
-#left-container{
-    text-align: center;
-    padding: 3%;
-}
+.square{
+    position: relative;
+    width: 40vw;
+    height: 40vh;
+    background-color: #007bff;
+    border-radius: 35px;
 
-#left-container img{
-    width: 40%;
-    height: 80%;
-    margin: 3%;
+    border: 3px solid #003f88;
+
+    text-align: center;
+    overflow: hidden;
+
+
+}
+.square:hover{
+    background-color: #005cbe;
+    transition: 0.4s;
+    transform: scale(1.07);
+
 }
 
 #right-container{
-    text-align: center;
-    padding: 3%;
+    margin-top: 30vh;
+    right: 0;
 }
-#drawPreview{
-    width: 35vw;
-    height: 40vh;
+#left-container{
+    margin-left: 3vw;
+    margin-top: 7vh;
 }
-#titleRow{
-    /* padding-top: 30px;  non va*/
+a{
+    text-decoration: none;
+    color: white;
 }
-#guessPreview{
-    width: 35vw;
-    height: 40vh;
+#gif{
+    height: 80%;
+    width: 80%;
+
+    margin-top: 7%;
+    margin-right: 5%;
+
+    border-radius: 20px;
+    background-color: #007bff;
 }
-.redir{
-    margin: 5% 3% 3%;
+
+
+
+.logo-holder {
+    background: rgba(242, 242, 242, 0);
+    height: 220px;
+    position: relative;
+    padding-top: 12px;
+    padding-bottom: 24px;
+
+    width: 40%;
+    transform: rotate(270deg);
+    left: 30%;
+
+    margin-left: 15%;
+    margin-top: 10%;
+}
+
+.bg {
+    background-size: contain;
+    -webkit-filter: drop-shadow(0px 6px 25px rgba(0,0,0,0.5));
+}
+#barsContainer{
+    position: relative;
+    left: 10px;
+}
+
+.bar {
+    position: relative;
+    height: 8px;
+    background: #f6d606;
+    width: 0;
+    top: 0;
+    left: 18px;
+    margin-top: 8px;
+    box-shadow: 0 0 3px rgb(255, 240, 0);
+    animation: fill 9s infinite alternate, colors 9s infinite alternate;
+
+}
+
+.bar.fill1 {
+    animation: fill-1 9s infinite alternate, colors 9s infinite alternate;
+}
+
+.bar.fill2 {
+    animation:  fill-2 9s infinite alternate, colors 9s infinite alternate;
+}
+
+
+.bar.fill3 {
+    animation:  fill-3 9s infinite alternate, colors 9s infinite alternate;
+}
+
+
+.bar.fill4 {
+    animation:  fill-4 9s infinite alternate, colors 9s infinite alternate;
+}
+
+.bar.fill5 {
+    animation:  fill-5 9s infinite alternate, colors 9s infinite alternate;
+}
+
+.bar.fill6 {
+    animation:  fill-6 9s infinite alternate, colors 9s infinite alternate;
+}
+
+@keyframes fill {
+    0%   { width: 0; }
+    33%  { width: 30px;}
+    66%  { width: 10px;}
+    100% { width: 105px; }
+}
+
+@keyframes fill-1 {
+    0%   { width: 0; }
+    33%  { width: 50px;}
+    66%  { width: 20px;}
+    100% { width: 130px; }
+}
+
+@keyframes fill-2 {
+    0%   { width: 0; }
+    33%  { width: 90px;}
+    66%  { width: 70px;}
+    100% { width: 136px; }
+}
+
+@keyframes fill-3 {
+    0%   { width: 0; }
+    33%  { width: 50px;}
+    66%  { width: 24px;}
+    100% { width: 109px; }
+}
+
+@keyframes fill-4 {
+    0%   { width: 0; }
+    33%  { width: 98px;}
+    66%  { width: 34px;}
+    100% { width: 99px; }
+}
+
+@keyframes fill-5 {
+    0%   { width: 0; }
+    33%  { width: 30px;}
+    66%  { width: 10px;}
+    100% { width: 148px; }
+}
+
+
+@keyframes fill-6 {
+    0%   { width: 0; }
+    33%  { width: 48px;}
+    66%  { width: 22px;}
+    100% { width: 140px; }
+}
+
+@keyframes colors {
+    0% { background-color: #e0d306;}
+    50% { background-color: #fff002;}
+    100% { background-color: #e1d205;}
 }
